Created a Page Model and added it to the active admin dashboard

--- a/app/views/product/_product.html.erb
+++ b/app/views/product/_product.html.erb
@@ -1,2 +1,11 @@
 <div class = "product">
-<p><%= product.ProductName %>s </p>
+<p><%= product.Price %>s </p>
+
+<% if product.image.present? %>
+
+<div class="card-image">
+  <figure class="image is-4by3">
+  <%= image_tag url_for(product.image)%>
+  </figure>
+</div>
+<% end %>
