--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Product#index</h1>
-<p>Find me in app/views/product/index.html.erb</p>
+
+<% @products.each do |product| %>
+
+<p><%= product.ProductName %> </p>
+<p><%= image_tag(product.image, alt: "Image")%></p>
+<% end %>
