--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,6 +1,7 @@
 
 <% @products.each do |product| %>
 
-<p><%= product.ProductName %> </p>
+<p><%= link_to product.ProductName, controller: "product", action: "show", id: product.id %> </p>
+
 <p><%= image_tag(product.image, alt: "Image")%></p>
 <% end %>
