Created a Categories model

--- a/app/views/product/_product.html.erb
+++ b/app/views/product/_product.html.erb
@@ -1,5 +1,6 @@
 <div class = "product">
-<p><%= product.Price %>s </p>
+<h1><%= product.ProductName%></h1>
+<p>$<%= product.Price %></p>
 
 <% if product.image.present? %>
 
