--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,20 @@
         </ul>
       </nav>
   </header>
+  <header>
+    <h3>Categories</h3>
+    <nav>
+      <ul>
+        <li><%= link_to 'BoyGroup', permalink_path(permalink: 'BoyGroup')%></li>
+        <li><%= link_to 'GirlGroup', permalink_path(permalink: 'GirlGroup')%></li>
+      </ul>
+    </nav>
+  </header>
 
 <%= form_with(url: search_results_product_index_path, method: "get", local: true) do %>
   <%= label_tag(:query, "Search for:") %>
   <%= text_field_tag(:query) %>
-  <%= select_tag  :query, options_for_select(["Boy", "Girl","All Groups"])%>
+ <!--  <%= select_tag  :query, options_for_select(["Boy", "Girl","All Groups"])%>-->
   <%= submit_tag("Search") %>
 <% end %>
     <%= yield %>
