--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,8 +1,3 @@
-<h1>Page#show</h1>
-<p>Find me in app/views/page/show.html.erb</p>
+<h1><%= @page.title %> </h1>
 
-<% @page.each do |pages| %>
-
-<p><%= pages.title %></p>
-
-<% end %>
+<p><%= @page.content %> </p>
