--- a/app/views/customer_informations/registrations/new.html.erb
+++ b/app/views/customer_informations/registrations/new.html.erb
@@ -21,9 +21,16 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+    <div class="field">
+    <%= f.label :address %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render "customer_informations/shared/links" %>
