--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
           <li><%= link_to 'About', permalink_path(permalink: 'about')%></li>
           <li><%= link_to 'Contact', permalink_path(permalink: 'contact') %></li>
 
-          <% if user_signed_in? %>
-            <li><%= link_to current_user.email, edit_user_registration_path %> </li>
-            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+          <% if customer_information_signed_in? %>
+            <li><%= link_to current_customer_information.email, edit_customer_information_registration_path %> </li>
+            <li><%= link_to 'Logout', destroy_customer_information_session_path, method: :delete %></li>
           <% else %>
-          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-          <li><%= link_to 'Login', new_user_session_path %></li>
+          <li><%= link_to 'Sign Up', new_customer_information_registration_path %></li>
+          <li><%= link_to 'Login', new_customer_information_session_path %></li>
           <% end %>
 
         </ul>
