Added a custom flash message

--- a/app/views/customer_informations/registrations/new.html.erb
+++ b/app/views/customer_informations/registrations/new.html.erb
@@ -15,7 +15,7 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-
+<p>sdsadasda</p>
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
