--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -1,3 +1,7 @@
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, class: name%>
+<%end%>
+
 <details>
   <summary>Shopping Cart</summary>
   <% if @cart.empty?%>
