Added address field to sign up page

--- a/app/views/customer_informations/registrations/new.html.erb
+++ b/app/views/customer_informations/registrations/new.html.erb
@@ -15,19 +15,19 @@
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
-<p>sdsadasda</p>
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-    <div class="field">
+
+  <div class="field">
     <%= f.label :address %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.text_field :address%>
   </div>
 
-
-
+  <p>sadas</p>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
