--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,41 +10,55 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'About', permalink_path(permalink: 'about')%></li>
-          <li><%= link_to 'Contact', permalink_path(permalink: 'contact') %></li>
+      <nav class="level">
+        <p class="level-item has-text-centered">
+          <%= link_to 'Home', root_path %>
+        </p>
+        <p class="level-item has-text-centered">
+          <%= link_to 'About', permalink_path(permalink: 'about')%>
+        </p>
+        <p class="level-item has-text-centered">
+          <%= link_to 'Contact', permalink_path(permalink: 'contact') %>
+        </p>
 
+        <p class="level-item has-text-centered">
           <% if customer_information_signed_in? %>
-            <li><%= link_to current_customer_information.email, edit_customer_information_registration_path %> </li>
-            <li><%= link_to 'Logout', destroy_customer_information_session_path, method: :delete %></li>
+          <%= link_to current_customer_information.email, edit_customer_information_registration_path %>
+        </p>
+        <p class="level-item has-text-centered">
+          <%= link_to 'Logout', destroy_customer_information_session_path, method: :delete %>
+        </p>
           <% else %>
-          <li><%= link_to 'Sign Up', new_customer_information_registration_path %></li>
-          <li><%= link_to 'Login', new_customer_information_session_path %></li>
-          <% end %>
+        <p class="level-item has-text-centered">
+          <%= link_to 'Sign Up', new_customer_information_registration_path %>
+        </p>
 
-        </ul>
+        <p class="level-item has-text-centered">
+          <%= link_to 'Login', new_customer_information_session_path %>
+        </p>
+
+        <p class="level-item has-text-centered">
+        <%= form_with(url: search_results_product_index_path, method: "get", local: true) do %>
+          <%= label_tag(:query, "Search for:") %>
+          <%= text_field_tag(:query) %>
+
+        <%= collection_select(:categorys, :category_id, Category.all, :id, :name, :include_blank => true)%>
+        <%= submit_tag("Search") %>
+          <% end %>
       </nav>
-  </header>
-  <header>
-    <h3>Categories</h3>
-    <nav>
-      <ul>
+
+
+  <aside class="menu">
+
+    <h3 class="menu-label">Categories</h3>
+    <nav class="level">
+      <ul class="menu-list">
         <li><%= link_to 'BoyGroup', category_path(@category = 1)%></li>
         <li><%= link_to 'GirlGroup', category_path(@category = 2)%></li>
       </ul>
     </nav>
-  </header>
-
-<%= form_with(url: search_results_product_index_path, method: "get", local: true) do %>
-  <%= label_tag(:query, "Search for:") %>
-  <%= text_field_tag(:query) %>
-
-  <%= collection_select(:categorys, :category_id, Category.all, :id, :name, :include_blank => true)%>
-  <%= submit_tag("Search") %>
-<% end %>
+  <% end %>
+  </aside>
     <%= yield %>
   </body>
 </html>
