--- a/app/views/categorys/show.html.erb
+++ b/app/views/categorys/show.html.erb
@@ -1,10 +1,18 @@
-<p><%= @category.name %> </p>
+<p class="title is-2"><%= @category.name %> </p>
+
+<div class="container is-widescreen">
+<div class="card product">
+  <div class="card-content">
 
 <%  @category.products.each do |product|%>
-  <h1><%= link_to product.ProductName, controller: "product", action: "show", id: product.id %> </h1>
+  <h1 class="title is-4"><%= link_to product.ProductName, controller: "product", action: "show", id: product.id %> </h1>
   <p><%= image_tag(product.image.variant(resize: "500x500"), alt: "Image")%></p>
   <p><%=  product.Price%></p>
    <p><%=  product.Description%></p>
     <p><%= product.ProductDetails%></p>
-
+  <p>Quantity - <%= number_field_tag 'quantity'%> </p>
+  <p><%= link_to 'Add To Cart', add_to_cart_path(product.id), method: :post %> </p>
 <%end%>
+</div>
+</div>
+</div>
