--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,3 +1,12 @@
-<h1><%= @page.title %> </h1>
 
-<p><%= @page.content %> </p>
+
+<div class="container is-widescreen">
+  <div class="card product">
+   <div class="card-content">
+
+  <h1><%= @page.title %> </h1>
+
+  <p><%= @page.content %> </p>
+</div>
+</div>
+</div>
