--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -2,10 +2,11 @@
   <%= content_tag :div, msg, class: name%>
 <%end%>
 
+<p class="level-item has-text-centered">
 <details>
   <summary>Shopping Cart</summary>
   <% if @cart.empty?%>
-    <p>Your cart is empty. </p>
+    <p>Your cart is empty.
     <% else %>
     <ul>
       <% @cart.each do |product| %>
@@ -14,13 +15,23 @@
       <% end %>
     </ul>
     <% end %>
+</p>
 </details>
 
-<% @products.each do |product| %>
-<p><%= link_to product.ProductName, controller: "product", action: "show", id: product.id %> </p>
+      <div class="container is-widescreen">
+        <div class="card product">
+          <div class="card-content">
+            <h3 class="title is-4">All Kpop albums</h3>
+            <% @products.each do |product| %>
 
-<p><%= image_tag(product.image.variant(resize: "500x500"), alt: "Image")%></p>
-<p>Quantity - <%= number_field_tag 'quantity'%> </p>
-<p><%= link_to 'Add To Cart', add_to_cart_path(product.id), method: :post %> </p>
-<%= paginate @products %>
-<% end %>
+              <p class="title is-4"><%= link_to product.ProductName, controller: "product", action: "show", id: product.id, class: 'button-is-link'%> </p>
+
+
+              <p><%= image_tag(product.image.variant(resize: "500x500"), alt: "Image")%></p>
+              <p>Quantity - <%= number_field_tag 'quantity'%> </p>
+              <p><%= link_to 'Add To Cart', add_to_cart_path(product.id), method: :post %> </p>
+              <% end %>
+              <%= paginate @products %>
+          </div>
+      </div>
+  </div>
