--- a/app/views/customer_informations/registrations/new.html.erb
+++ b/app/views/customer_informations/registrations/new.html.erb
@@ -1,7 +1,23 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+
+      <div class="container is-widescreen">
+        <div class="card product">
+          <div class="card-content">
+          <h2>Sign up</h2>
+
+  <div class="field">
+    <%= f.label :firstName %><br />
+    <%= f.text_field :firstName%>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :lastName %><br />
+    <%= f.text_field :lastName%>
+  </div>
+
 
   <div class="field">
     <%= f.label :email %><br />
@@ -27,10 +43,12 @@
     <%= f.text_field :address%>
   </div>
 
-  <p>sadas</p>
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
 <%= render "customer_informations/shared/links" %>
+  </div>
+  </div>
+  </div>
