--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-      <nav class="level">
+  <nav class="level">
+      <div class="level-left">
         <p class="level-item has-text-centered">
           <%= link_to 'Home', root_path %>
         </p>
@@ -20,7 +21,9 @@
         <p class="level-item has-text-centered">
           <%= link_to 'Contact', permalink_path(permalink: 'contact') %>
         </p>
+      </div>
 
+      <div class="level-right">
         <p class="level-item has-text-centered">
           <% if customer_information_signed_in? %>
           <%= link_to current_customer_information.email, edit_customer_information_registration_path %>
@@ -42,10 +45,11 @@
           <%= label_tag(:query, "Search for:") %>
           <%= text_field_tag(:query) %>
 
-        <%= collection_select(:categorys, :category_id, Category.all, :id, :name, :include_blank => true)%>
+        <%= collection_select(:categorys, :category_id, Category.all, :id, :name)%>
         <%= submit_tag("Search") %>
+        </div>
           <% end %>
-      </nav>
+          </nav>
 
 
   <aside class="menu">
