--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -1,4 +1,3 @@
-<h3 class="title is-4"><%= @product.ProductName %></h3>
 <% if @product.image.present? %>
 
 
@@ -6,7 +5,13 @@
 <div class="card product">
   <div class="card-content">
 <div class="card-image">
+<h3 class="title is-4"><%= @product.ProductName %></h3>
   <%= image_tag url_for(@product.image.variant(resize: "600x600"))%>
+    <p><%=  @product.Price%></p>
+   <p><%=  @product.Description%></p>
+    <p><%= @product.ProductDetails%></p>
+                  <p>Quantity - <%= number_field_tag 'quantity'%> </p>
+              <p><%= link_to 'Add To Cart', add_to_cart_path(@product.id), method: :post %> </p>
 </div>
 <% end %>
 </div>
