--- a/app/views/customer_informations/registrations/edit.html.erb
+++ b/app/views/customer_informations/registrations/edit.html.erb
@@ -8,6 +8,16 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :firstName %><br />
+    <%= f.text_field :firstName%>
+  </div>
+
+  <div class="field">
+    <%= f.label :lastName %><br />
+    <%= f.text_field :lastName%>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -35,6 +45,15 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_field :address%>
+  </div>
+
+   <div class="field">
+    <%= f.label :province_id %><br />
+      <%= collection_select(:provinces, :province_id, Province.all, :id, :name)%>
+  </div>
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
