--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -17,15 +17,14 @@
     <% end %>
 </p>
 </details>
-      <div class="container is-widescreen">
+
+        <div class="column">
         <div class="card product">
           <div class="card-content">
             <h3 class="title is-4">All Kpop albums</h3>
             <% @products.each do |product| %>
-
-              <p class="title is-4"><%= link_to product.ProductName, controller: "product", action: "show", id: product.id, class: 'button-is-link'%> </p>
+              <p class="title is-4"><%= link_to product.ProductName, controller: "product", action: "show", id: product.id, class:'button is-success is-light'%></p>
               <p><%= image_tag(product.image.variant(resize: "500x500"), alt: "Image")%></p>
-              <p>$<%=  product.Price%></p>
               <p><%=  product.Description%></p>
               <p><%= product.ProductDetails%></p>
               <p>Quantity - <%= number_field_tag 'quantity'%> </p>
@@ -33,5 +32,5 @@
               <% end %>
               <%= paginate @products %>
           </div>
+          </div>
       </div>
-  </div>
