Added Font Styles too my page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,6 @@
         </p>
     </div>
 
-  <div class="level-center">
-  <p class="title is-1">K-GALLERY </p>
-  </div>
-
     <div class="level-right">
         <p class="level-item has-text-centered">
           <% if customer_information_signed_in? %>
@@ -57,7 +53,11 @@
   <% end %>
    </div>
 </nav>
-
+  <nav class="level">
+  <div class="level-center">
+  <p class="title is-1">K-GALLERY </p>
+  </div>
+  </nav>
   <aside class="menu">
 
     <h3 class="menu-label">Categories</h3>
