--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -4,9 +4,10 @@
   <div class="card product">
    <div class="card-content">
 
-  <h1><%= @page.title %> </h1>
+  <h1 class="title is-1"><%= @page.title %> </h1>
 
   <p><%= @page.content %> </p>
+  <p><%= image_tag(@page.image.variant(resize: "1000x1000"), alt: "Image")%></p>
 </div>
 </div>
 </div>
