--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -18,9 +18,12 @@
 </p>
 </details>
 
-        <div class="column">
-        <div class="card product">
-          <div class="card-content">
+
+
+<div class="container is-widescreen">
+<div class="card product">
+  <div class="card-content">
+<div class="card-image">
             <h3 class="title is-4">All Kpop albums</h3>
             <% @products.each do |product| %>
               <p class="title is-4"><%= link_to product.ProductName, controller: "product", action: "show", id: product.id, class:'button is-success is-light'%></p>
@@ -30,7 +33,7 @@
               <p>Quantity - <%= number_field_tag 'quantity'%> </p>
               <p><%= link_to 'Add To Cart', add_to_cart_path(product.id), method: :post %> </p>
               <% end %>
-              <%= paginate @products %>
+              <%= paginate @products%>
           </div>
           </div>
       </div>
