Finally successfully able to permit my provinces to the database

--- a/app/views/customer_informations/registrations/edit.html.erb
+++ b/app/views/customer_informations/registrations/edit.html.erb
@@ -52,7 +52,7 @@
 
    <div class="field">
     <%= f.label :province_id %><br />
-        <%= collection_select(:provinces, :province_id, Province.all, :id, :name)%>
+        <%= f.collection_select :province_id, Province.all, :id, :name%>
   </div>
   <div class="actions">
     <%= f.submit "Update" %>
