--- a/app/views/customer_informations/registrations/new.html.erb
+++ b/app/views/customer_informations/registrations/new.html.erb
@@ -43,6 +43,13 @@
     <%= f.text_field :address%>
   </div>
 
+     <div class="field">
+    <%= f.label :province_id %><br />
+        <%= f.collection_select :province_id, Province.all, :id, :name%>
+
+  </div>
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
